--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -7,11 +7,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native -t quarkus/upcli .
+# docker build -f src/main/docker/Dockerfile.native -t quarkus/up-cli .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/upcli
+# docker run -i --rm -p 8080:8080 quarkus/up-cli
 #
 ###
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.6
