--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <quarkus.platform.version>2.16.4.Final</quarkus.platform.version>
     <skipITs>true</skipITs>
     <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
+    <graalvm.version>22.3.1</graalvm.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -40,6 +41,17 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.graalvm.truffle</groupId>
+      <artifactId>truffle-api</artifactId>
+      <version>${graalvm.version}</version> <!-- or any later version -->
+    </dependency>
+    <dependency>
+      <groupId>org.graalvm.truffle</groupId>
+      <artifactId>truffle-dsl-processor</artifactId>
+      <version>${graalvm.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
