--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <skipITs>true</skipITs>
     <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
     <graalvm.version>22.3.1</graalvm.version>
+    <skipTests></skipTests>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -55,6 +56,8 @@
     </dependency>
   </dependencies>
   <build>
+    <defaultGoal>package</defaultGoal>
+    <finalName>up</finalName>
     <plugins>
       <plugin>
         <groupId>${quarkus.platform.group-id}</groupId>
