--- a/up_lib/pyproject.toml
+++ b/up_lib/pyproject.toml
@@ -1,8 +1,11 @@
 [tool.poetry]
 name = "up_lib"
-version = "0.1.2"
+version = "0.1.3"
 description = ""
 authors = ["Julio Faerman <jufaerma@redhat.com>"]
+packages = [
+    { include = "up_lib" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
