--- a/up_cli/pyproject.toml
+++ b/up_cli/pyproject.toml
@@ -5,7 +5,7 @@ description = "up cli"
 authors = ["Julio Faerman <jufaerma@redhat.com>"]
 packages = [
     { include = "up"},
-    { include = "up_lib", from="../up_lib" },
+    { include = "up_lib", from="../up_lib/src" },
 ]
 
 [tool.poetry.dependencies]
