--- a/up_lib/pyproject.toml
+++ b/up_lib/pyproject.toml
@@ -3,6 +3,9 @@ name = "up_lib"
 version = "0.1.333"
 description = "Functions library for up-tools (a.k.a. backend)"
 authors = ["Julio Faerman <jufaerma@redhat.com>"]
+packages = [
+    { include = "up_lib", from="./src/"}
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
