--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,11 +13,13 @@ tasks:
   - name: CLI
     command: |
       cd up_cli
+      poetry install
       poetry run up wait: echo hello
 
   - name: LIB
     command: |
       cd up_lib
+      poetry install
       poetry run pytest -s
 
 vscode:
