--- a/up_cli/pyproject.toml
+++ b/up_cli/pyproject.toml
@@ -9,8 +9,8 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
-up_lib = "0.1.5"
-
+# up_lib = "0.1.5"
+up_lib = { path="../up_lib", develop=true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
