--- a/up_ansible/pyproject.toml
+++ b/up_ansible/pyproject.toml
@@ -1,12 +1,16 @@
 [tool.poetry]
-name = "up-ansible"
+name = "up_ansible"
 version = "0.1.0"
 description = ""
 authors = ["Julio Faerman <jufaerma@redhat.com>"]
 readme = "README.md"
 
+[project]
+name = "up_ansible"
+
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
+pluggy = "^1.3.0"
 
 
 [build-system]
