--- a/up_cli/pyproject.toml
+++ b/up_cli/pyproject.toml
@@ -5,13 +5,15 @@ description = ""
 authors = ["Julio Faerman <jufaerma@redhat.com>"]
 readme = "README.md"
 packages = [
-    { include = "up_cli", from="./src/"},
-    { include = "up_splat", from="../up_splat"}
+    { include = "up_cli", from="./src/"}
 ]
 
 [tool.poetry.dependencies]
 python = "^3.11"
 pluggy = "^1.3.0"
+docker = "^6.1.3"
+up_ansible = { path = "../up_ansible", develop = true }
+up_splat = { path = "../up_splat", develop = true }
 
 
 [build-system]
