--- a/up_splat/pyproject.toml
+++ b/up_splat/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "up-splat"
+name = "up_splat"
 version = "0.1.0"
 description = ""
 authors = ["Julio Faerman <jufaerma@redhat.com>"]
@@ -10,13 +10,10 @@ python = "^3.12"
 pluggy = "^1.3.0"
 
 
-# [build-system]
-# requires = ["poetry-core"]
-# build-backend = "poetry.core.masonry.api"
-
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
 
 
 [project]
