--- a/up_cli/pyproject.toml
+++ b/up_cli/pyproject.toml
@@ -14,6 +14,7 @@ pluggy = "^1.3.0"
 docker = "^6.1.3"
 up_ansible = { path = "../up_ansible", develop = true }
 up_splat = { path = "../up_splat", develop = true }
+dynaconf = {extras = ["all"], version = "^3.2.3"}
 
 
 [build-system]
