--- a/up_splat/pyproject.toml
+++ b/up_splat/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "up_splat"
-version = "0.1.0"
+name = "up-splat"
+version = "0.2.1"
 description = ""
 authors = ["Julio Faerman <jufaerma@redhat.com>"]
 readme = "README.md"
@@ -15,9 +15,8 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 
-
 [project]
-name = "up_splat"
+name = "up-splat"
 
 [project.entry-points.pytest11]
 up = "up.pluginmodule"
