--- a/up_ansible/pyproject.toml
+++ b/up_ansible/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "up-ansible"
-version = "0.2.1"
+version = "0.2.17"
 description = ""
 authors = ["Julio Faerman <jufaerma@redhat.com>"]
 readme = "README.md"
@@ -10,8 +10,7 @@ name = "up-ansible"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pluggy = "^1.3.0"
-
+up-lib = "0.2.17"
 
 [build-system]
 requires = ["poetry-core"]
