--- a/up_cli/pyproject.toml
+++ b/up_cli/pyproject.toml
@@ -1,20 +1,18 @@
 [tool.poetry]
 name = "up"
-version = "0.2.1"
+version = "0.2.17"
 description = ""
 authors = ["Julio Faerman <jufaerma@redhat.com>"]
 readme = "README.md"
-packages = [
-    { include = "up_cli", from="./src/"}
-]
+#packages = [
+#    { include = "up_cli", from="./up_cli/"}
+#]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pluggy = "^1.3.0"
-docker = "^6.1.3"
-up-ansible = "^0.2.1"
-up-splat = "^0.2.1"
-dynaconf = {extras = ["all"], version = "^3.2.3"}
+up-lib = "0.2.17"
+up-splat = "0.2.17"
+up-ansible = "0.2.17"
 
 
 [build-system]
@@ -22,4 +20,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-up = 'up_cli.main:main'
+up = "up.main:main"
