--- a/up_lib/pyproject.toml
+++ b/up_lib/pyproject.toml
@@ -1,11 +1,15 @@
 [tool.poetry]
 name = "up-lib"
-version = "0.2.1"
+version = "0.2.17"
 description = ""
 authors = ["Julio Faerman <356476+faermanj@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.12"
+pluggy = "^1.3.0"
+docker = "^6.1.3"
+dynaconf = {extras = ["all"], version = "^3.2.3"}
+
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
