--- a/up_splat/pyproject.toml
+++ b/up_splat/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "up-splat"
-version = "0.2.18"
+version = "0.2.19"
 description = ""
 authors = ["Julio Faerman <jufaerma@redhat.com>"]
 readme = "README.md"
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 pluggy = "^1.3.0"
-
+uplib = "^0.2.19"
 
 [build-system]
 requires = ["poetry-core"]
