--- a/upcli/pyproject.toml
+++ b/upcli/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "up"
-version = "0.2.18"
+version = "0.2.19"
 description = ""
 authors = ["Julio Faerman <jufaerma@redhat.com>"]
 readme = "README.md"
@@ -10,9 +10,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-up-lib = "0.2.18"
-up-splat = "0.2.18"
-up-ansible = "0.2.18"
+uplib = "^0.2.19"
+up-splat = "0.2.19"
+up-ansible = "0.2.19"
 
 
 [build-system]
