--- a/uplib/pyproject.toml
+++ b/uplib/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "up-lib"
-version = "0.2.18"
+name = "uplib"
+version = "0.2.19"
 description = ""
 authors = ["Julio Faerman <356476+faermanj@users.noreply.github.com>"]
 
