--- a/upcli/pyproject.toml
+++ b/upcli/pyproject.toml
@@ -21,4 +21,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-up = "up.main:main"
+up = "up.main:cli_main"
