--- a/uplib/pyproject.toml
+++ b/uplib/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.12"
 pluggy = "^1.3.0"
 docker = "^6.1.3"
 dynaconf = {extras = ["all"], version = "^3.2.3"}
+rich = "^13.6.0"
 
 
 [tool.poetry.dev-dependencies]
