--- a/upcli/pyproject.toml
+++ b/upcli/pyproject.toml
@@ -14,7 +14,7 @@ uplib = "^0.2.19"
 up-splat = "^0.2.19"
 up-ansible = "^0.2.19"
 up-aws = "^0.2.19"
-
+up-demo = "^0.2.19"
 
 [build-system]
 requires = ["poetry-core"]
