--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,89 +7,52 @@ on:
       - '*'
 
 jobs:
-  linux:
-    name: "building ${{ matrix.package }} to ${{ matrix.platform }}"
-    runs-on: ubuntu-latest
-    env:
-      CIBW_BUILD: "cp312*-${{ matrix.platform }}"
-    strategy:
-      matrix:
-        platform: [manylinux_x86_64, musllinux_x86_64]
-        package: [upcli, uplib]
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Enter ${{ matrix.package }} dir
-        uses: cd ${{ matrix.package }}
-
-      - name: Build wheel
-        uses: pypa/cibuildwheel@v2.16.2
-
-      - uses: actions/upload-artifact@v4
-        with:
-          path: ./wheelhouse/*.whl
-
-  windows:
-    name: "building ${{ matrix.package }} to ${{ matrix.platform }}"
-    runs-on: windows-latest
-    env:
-      CIBW_BUILD: "cp312*-${{ matrix.platform }}"
-    strategy:
-      matrix:
-        platform: [cp312-win_amd64]
-        package: [upcli, uplib]
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Enter ${{ matrix.package }} dir
-        uses: cd ${{ matrix.package }}
-
-      - name: Build wheel
-        uses: pypa/cibuildwheel@v2.16.2
-
-      - uses: actions/upload-artifact@v4
-        with:
-          path: ./wheelhouse/*.whl
-
-  macos:
-    name: "building ${{ matrix.package }} to ${{ matrix.platform }}"
-    runs-on: macos-latest
-    env:
-      CIBW_BUILD: "cp312*-${{ matrix.platform }}"
-    strategy:
-      matrix:
-        platform: [macosx_arm64, macosx_x86_64]
-        package: [upcli, uplib]
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Enter ${{ matrix.package }} dir
-        uses: cd ${{ matrix.package }}
-
-      - name: Build wheel
-        uses: pypa/cibuildwheel@v2.16.2
-
-      - uses: actions/upload-artifact@v4
-        with:
-          path: ./wheelhouse/*.whl
-
   publish:
-    needs: [linux, macos, windows]
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/<your-pypi-project-name>
     strategy:
       matrix:
-        python-version: "3.12"
+        package: [upcli, uplib]
+    permissions:
+      id-token: write
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.12'
 
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
+      - run: pip install build
 
-      - name: Publish packages
-        uses: poetry publish -C=./wheelhouse
+      - name: build ${{ matrix.package }}
+        run: |
+          cd {{ matrix.package }}
+          python -m build
+
+      - uses: actions/upload-artifact@v4
+        with:
+          path: ./${{ matrix.package }}/dist/*
+
+      - name: Publish packages to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+
+  release:
+    needs: [publish]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/download-artifact@v4
+        with:
+          #pattern: *.whl
+          merge-multiple: true
+          path: dist
+
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+            files: dist/
 
